Services  and Networking/Service&Types/NodePort.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nodeport-service-demo
  namespace: app-1
spec:
  type: NodePort
  selector:
    app: nginx-deployment
  ports:
    - port:    70              # Service port 
      targetPort:  90          # Pod container port
      nodePort: 31512
