Services  and Networking/Service&Types/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: app-1
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx.example.com
      http:
        paths:
          - path: /
            pathtype: Prefix
            backend:
              service:
                name:  clusterip-service-demo            # refer to ClusterIP.yaml Demo metadata.name
                port: 
                  number:  80                             # refer to ClusterIP.yaml  port
